WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288081
Fix BBQJIT::F64CopySign on armv7
https://bugs.webkit.org/show_bug.cgi?id=288081
Summary
Fix BBQJIT::F64CopySign on armv7
Max Rottenkolber
Reported
2025-02-20 04:19:35 PST
BBQJIT::F64CopySign on armv7 tries to allocate a gpr pair for what needs to be a fpr scratch register.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2025-02-27 03:43:19 PST
Committed
291216@main
(667960fc0425): <
https://commits.webkit.org/291216@main
> Reviewed commits have been landed. Closing PR #40964 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2025-02-27 03:44:19 PST
<
rdar://problem/145734612
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug