[JSC][armv7] Fix BBQJIT::F64CopySign on armv7 https://bugs.webkit.org/show_bug.cgi?id=288081

Reviewed by Yusuke Suzuki and Justin Michaud.

Properly allocate a scratch FPR instead of a GPR pair for a scratch float value.

* Source/JavaScriptCore/wasm/WasmBBQJIT32_64.cpp:
(JSC::Wasm::BBQJITImpl::BBQJIT::addF64Copysign):

Canonical link: https://commits.webkit.org/291216@main